tests/reference/asr-class_04-b89178d.stderr
semantic error: Only Class constructor is allowed in the object assignment for now
 --> tests/errors/class_04.py:9:1
  |
9 | p2: coord = p1
  | ^^^^^^^^^^^^^^ 
